add google login

--- a/web/index.html
+++ b/web/index.html
@@ -29,8 +29,18 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
+  <script src="https://accounts.google.com/gsi/client" async></script>
+
+  <meta name="google-signin-client_id" content="601844275628-i78kqsesv4lkpn9abd0b6qkgg3acrdod.apps.googleusercontent.com">
   <title>skillpath</title>
   <link rel="manifest" href="manifest.json">
+
+  <script>
+    // The value below is injected by flutter build, do not touch.
+    var serviceWorkerVersion = null;
+  </script>
+  <!-- This script adds the flutter initialization JS code -->
+  <script src="flutter.js" defer></script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
